[Bug][Bran&Eddie] Alignment for no events on dashboard

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -6,3 +6,7 @@
   text-align: center;
   margin: 125px;
 }
+
+.no-events {
+  margin: 30px;
+}
